# deepsea-experiments

./: .gitignore  README.md  pyproject.toml  train.py
data/: README.md  setup.py
evaluation/: PR Curve Plotter and AUC Estimator.ipynb  README.md  ROC Curve Plotter and AUC Estimator.ipynb  danq_aucs.csv  feature_names.csv
models/: README.md
neuralsea/: README.md  __init__.py  _se_block.py  _time_distributed.py  _utils.py  blocks.py  neuralsea.py  neuralsea_a.py  res_se_block.py  se_block.py  utils.py
reference/: DanQ_train.py  DanQ_trainV2.py  README.md  bestmodel.py
